<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jhobber</string>
    <string name="app_author">Yorman Arias</string>
    <string name="app_website">www.cixtor.com</string>
    <string name="app_sponsor">Sponsor — CICCC</string>
    <string name="app_copyright">Copyright © - 2018</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_logout">Log Out</string>
    <string name="user_fullname">Cat Damon Pawclaw</string>
    <string name="user_jobtitle">Senior Software Engineer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="signup_username">LinkedIn username</string>
    <string name="signup_footer">NO PASSWORD LOGIN</string>
    <string name="signup_firstname">Firstname</string>
    <string name="signup_lastname">Lastname</string>
    <string name="signup_occupation">Occupation</string>
    <string name="signup_button">Create Account</string>
    <string name="signup_creating">Creating...</string>
    <string name="signup_empty_username">Username is empty, try again.</string>
    <string name="signup_account_created">Account successfully created.</string>
    <string name="logout_title">Jhobber — Log Out</string>
    <string name="logout_warning">All the data associated to your profile will be deleted from your phone. If you log into the app once again, the data will be re-downloaded from LinkedIn.</string>
    <string name="logout_success">Profile data has been deleted.</string>
    <string name="job_search_hint">e.g. Software Engineer</string>
    <string name="gps_unavailable">Geo location service is unavailable.</string>
    <string name="gps_you_are_here">YOU ARE HERE</string>
    <string name="search">Search</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
