<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/drawer_home"
            android:enabled="false" />
        <item
            android:id="@+id/nav_map"
            android:title="@string/drawer_map"
            android:enabled="false" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/drawer_profile"
            android:enabled="false" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/drawer_settings"
            android:enabled="false" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/drawer_about"
            android:enabled="true" />
    </group>
</menu>
