<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.About">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/app_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:textAlignment="center"
        android:text="@string/app_author"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/app_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="419dp"
        android:textAlignment="center"
        android:text="@string/app_website"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/app_sponsor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="438dp"
        android:textAlignment="center"
        android:text="@string/app_sponsor"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/app_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="457dp"
        android:textAlignment="center"
        android:text="@string/app_copyright"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"/>

</FrameLayout>
