<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragment.Profile">

    <ImageView
        android:id="@+id/profileAvatarBack"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_gravity="top"
        android:layout_marginTop="-60dp"
        android:background="@color/passive"
        android:alpha="0.4" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profileAvatar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            app:civ_border_color="@color/accentAlpha"
            app:civ_border_width="2dp" />

        <FrameLayout
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/passiveAlpha"
            android:paddingTop="14dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/profileFullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_fullname"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/profileOccupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_jobtitle"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:textSize="16sp" />
        </FrameLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:background="@color/white">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/jobPosts"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</FrameLayout>
